# actor-manager

./: .gitignore  README.md  pyproject.toml
backend/: .gitignore  alembic.ini  config.py  logging_config.py  requirements.txt  server.py
backend/application/: agreement_service.py  payment_service.py  services.py  style_generation.py
backend/configs/: common.yml
backend/domain/: models.py  repositories.py
backend/infrastructure/: config.py  orm_models.py  repositories.py  security.py  storage.py
backend/interface/api/: auth_routes.py  auth_schemas.py  main.py  middleware.py  routes.py  schemas.py
backend/migrations/: 6f3144afe3bc_initial_migration.py  env.py
backend/migrations/versions/: 7c5f2efaf8c1_add_portrait_video_assets_table.py  92f6f7633661_add_auth_and_role_protocols.py  a1c9e4d2f6b7_add_custom_prompt_to_generated_results.py  a5f3b2c9d8e1_add_actor_withdraw_records.py  a6d9e3f2c1b4_add_company_intro_to_usermodel.py  a9d4e7f1c2b3_add_enterprise_agreement_tables.py  b2f4a6c1d9e7_add_compose_jobs_and_hot_path_indexes.py  b4c6d8e2f1a0_add_agreement_authorization_modes.py  (+13 more)
backend/scripts/: backfill_three_view_assets.py  bootstrap.py
backend/tests/: test_services.py  test_storage.py  test_style_generation.py
deployment/: README.md
deployment/logrotate/: actor-manager-backend  actor-manager-nginx
deployment/nginx/: nginx.conf
deployment/scripts/: deploy_update.sh
docs/: payment_prd.md  payment_technical_design.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.vue  index.css  style.css
(+41 files in other folders)
